# python-vending-machine

./: .dockerignore  .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt  vending-machine-arch.excalidraw
.github/workflows/: python-app.yml
cmds/: docker_down.sh  docker_test_up.sh  run_dev.sh  test_all.sh  test_e2e.sh  test_integration.sh  test_unit.sh
docker/dev/: docker-compose.yml
docker/test/: docker-compose.yml
env/dev/: .env
env/test/: .env
local/: pyvenv.cfg
scripts/dev/pg_admin/: config.json
scripts/dev/postgresql/: init.sh  postgres.conf.tpl
scripts/postgresql/: init.sh
scripts/test/pg_admin/: custom.pgpass
scripts/test/postgresql/: init.sh
src/domain/entities/: machine.py  order.py  order_item.py  owner.py  payment.py  product.py
src/domain/exceptions/: invalid_coins_qty.py  invalid_email.py  invalid_order_item_product_qty.py  invalid_order_status_change.py  invalid_products_price.py  invalid_products_qty.py  invalid_uuid.py  no_change_available.py  not_enough_cash_tendered.py
src/domain/repositories/: machine.py  order.py  payment.py  product.py
src/domain/value_objects/: coins.py  email.py  uuid.py
src/main/: app.py
src/main/bootstrap/: bootstrap.py
src/main/configs/: app.py
src/main/loaders/: loaders.py
src/main/routes/: machine_routes.py
src/presentation/controllers/: machine.py  (+1 more)
src/services/: machine.py  order.py  payment.py
test/controllers/: machine_test.py
test/e2e/: choose_product_test.py  pay_for_product_test.py
test/services/: machine_test.py  order_test.py  payment_test.py
(+74 files in other folders)
