[tool.poetry]
name = "python-vending-machine"
version = "0.0.1"
description = "A Low Level Design for a vending machine system using python and clean-architecture"
authors = ["gftf2011 <gftf2011@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
test = 'test:__main__'

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
python-dotenv = "^1.0.1"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
black = "^24.8.0"
testcontainers = "^4.8.0"
pylint = "^3.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
